[project]
name = "ai-engineering-bc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yonko Shanks", email = "kbaizhigit@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
